# ua-mect

./: README.md
1ano-mect/IIº Semestre/Labi/aula17/: g17ex1.sh  g17ex2.sh
1ano-mect/IIº Semestre/Labi/aula19/: dtmf.py  process.py  wave1.py  wavsoundgerated.py
1ano-mect/leci-1ano/: ok.txt
1ano-mect/leci-1ano/Calculo2/: README.md
1ano-mect/leci-1ano/Programacao-I/: README.md  teste.java
1ano-mect/leci-1ano/Programacao-II/: README.md  quiz.java
2ano-mect/IIº Semestre/Linguagens Formais e Autómatos/: ssh-key-demo.pem
3ano-LECI/IIºsemestre/PECI/: email-wit-software.txt  peer_self_evaluation_final_2022_PT.docx  peer_self_evaluation_intermediate_2020_EN.docx
4ano-mect/Iºsemestre/IC/: link.txt
4ano-mect/Iºsemestre/IC/Labs/lab02/: AudioCodec.cpp  AudioCodec.hpp  CMakeLists.txt  Codecaud.cpp  Codecaud.hpp  ImgCodec.cpp  ImgCodec.hpp  img_effects.cpp  matplotlibcpp.h  openCV_copy_img.cpp  predictor.cpp  predictor.hpp  testAudioCodec.cpp  testFoldUnFold.cpp  testGolomb.cpp  testImgCodec.cpp  test_codecaud.cpp  util.cpp
4ano-mect/Iºsemestre/IC/Labs/lab02/draft-code/: AudioCodec.hpp  BitStream.cpp  BitStream.hpp  testAudioCodec.cpp
4ano-mect/Iºsemestre/IC/Project/IC-Projeto-2/: .gitignore  AudioPredictors.h  BitSet.h  BitStream.h  CMakeLists.txt  GolombCoder.h  Makefile  README.md  golomb_efficiency.cpp  golomb_test.cpp  img_codec.cpp  img_cpy.cpp  img_effects.cpp  wav_golomb.cpp
4ano-mect/Iºsemestre/IC/Project/IC-Projeto-2/audio-results/: histrogram_audio.asv  histrogram_audio.m  lossless.mlx  lossy.mlx
4ano-mect/Iºsemestre/IC/Project/IC-Projeto-2/draft-code/: AudioCodec.cpp  Golomb.cpp  Golomb.hpp  testAudioCodec.cpp
4ano-mect/Iºsemestre/IC/Project/IC-Projeto-2/images/: 12.256.ppm
4ano-mect/Iºsemestre/IC/Project/IC-Projeto-2/images-results/: 03.256_effects_negative.ppm  04.256_effects_rotation_oneTime.ppm  04.256_effects_rotation_threeTime.ppm  04.256_effects_rotation_twoTime.ppm  15.256_img_decode.ppm  15.256_img_encode.ppm  23.256_effects_decreseBrightness.ppm  23.256_effects_increaseBrightness.ppm  girl_effects_inv.ppm  histogram_img.m  img_lossless.mlx
4ano-mect/Iºsemestre/IC/Project/IC-Projeto-3/: BitStream.h  CMakeLists.txt  DCTIntraEncoding.h  FrameQuantization.h  GolombCoder.h  IntraEncoding.h  MotionCompensation.h  README.md  YUV4MPEG2.h  video_cmp.cpp  video_codec.cpp  video_codec_dct.cpp
4ano-mect/Iºsemestre/IC/Project/IC-Projeto-3/analysis/: analysis.mlx  fquant_analysis.mlx  quant_analysis.mlx
4ano-mect/Iºsemestre/IC/Project/IC-Projeto_1/: AudioFile.h  BitSet.h  BitStream.h  BitStreamTest.cpp  CMakeLists.txt  Histogram.m  Makefile  README.md  text_codec.cpp  wav_cmp.cpp  wav_cmp.h  wav_cp.cpp  wav_dct.cpp  wav_dct_codec.cpp  wav_effects.cpp  wav_get_figures.mlx  wav_hist.cpp  wav_hist.h  wav_quant.cpp  wav_quant.h
4ano-mect/Iºsemestre/IC/Project/IC-Projeto_1/figures/: Coeff-Energy.tif  SNR-Energy.tif  SNR-bits.tif  sample-comp.tif  sample06-comp.tif  wav_dct_codec.mlx  wav_quant.mlx
5ano-mect/EP/docs/: valgrind-gdb-debugger.txt
5ano-mect/EP/examples/: Makefile  add.c  array.c  dynamic_mem.c  ep_complex.c  ep_eg_1.c  ep_eg_2.c  ep_eg_3.c  ep_eg_4.c  ep_eg_5.c  ep_exame_modelo  ep_exame_modelo.c  file_cat.c  file_cp.c  my_sort.c  my_sort_char.c  nnet.txt  power_of_2.c  readfile.c  sort_persons.c  strlen.c
5ano-mect/TPR/Exames/: ask-tpr.txt  detection-draft-tpr.txt  exmae-TPR-epoca-normal-18jan2024.docx
5ano-mect/TPR/Tools/: TAP-interface-config-Linux.txt
5ano-mect/TPR/project/: QUIC-advantages.txt  TPR-1stPresentation.pptx  detection.py  draft-config-gns3-nat.txt  draft-project-idea.txt  draft-project-presentation-part2.txt  requirements.txt  tpr-diagram-realWorld.drawio
(+1753 files in other folders)
