#SET (CMAKE_BUILD_TYPE "Release")
SET (CMAKE_BUILD_TYPE "Debug")
cmake_minimum_required(VERSION 2.8)
project( IC-Lab02 )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( openCV_copy_img openCV_copy_img.cpp )
target_link_libraries( openCV_copy_img ${OpenCV_LIBS} )
add_executable(testGolomb testGolomb.cpp)
target_link_libraries(testGolomb ${OpenCV_LIBS} )
add_executable(testAudioCodec testAudioCodec.cpp)
target_link_libraries(testAudioCodec ${OpenCV_LIBS} )
add_executable(testImgCodec testImgCodec.cpp)
target_link_libraries(testImgCodec ${OpenCV_LIBS} )